c/grid.css
/* ... */
.littlenav.ui-tabs-nav li.ui-state-default {

background:#999;

color:#fff;


}


.littlenav.ui-tabs-nav li.ui-state-active {
    left: -4px;
    padding-right: 4px !important;
bacgground:#222;

background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#888), to(#444));
background-image: -moz-linear-gradient(100% 100% 90deg,#444, #888 100%);
color:#fff;

}

#controller .attn{
padding:0 !important;
margin:0 !important;
border-top:none !important;
border-right:none !important;
border-left:none !important;
border-bottom:3px double #FF0099;
}

#helparrow {
position:absolute;
top:-10000px;
left:-10000px;
z-index:1000;

margin-top:10px;

-moz-transform: rotate(-35deg);
-webkit-transform: rotate(-35deg);
-o-transform: rotate(-35deg);
-ms-transform: rotate(-35deg);

}

.yakor {
    bottom: 1px;
    position: absolute;
    right: 1px;
    z-index: 11111;
}


.destroy_notification {
position:absolute;
top:.25em;
right:.25em;
text-decoration:none;
}

.notification.ontop {
z-index:10000;
}

.notification {
    color:#111;
    margin: 0 0 0 25%;
    padding: 0.25em 1.5em 0.25em 0.25em;
    position: absolute;
    width: 50%;
background:#fef49c;
border:1px solid #bca902;
    box-shadow: rgb(204,204,204) 0 1px 10px;
    -moz-box-shadow: rgb(204,204,204) 0 1px 10px;
    -webkit-box-shadow: rgb(204,204,204) 0 1px 10px;
   top:.5em;
   font-size:.75em;
   border-radius:.25em;
   -moz-border-radius:.25em;
   -webkit-border-radius:.25em;
}

.notification.confirm {
background:#b2ffa1;
border-color:#449a44;
color:#003300;
}

.notification.error {
background:#ffc7c7;
border-color:#bf6363;
color:#663333;
}

.error {

color:red;
}

#featuredhashtags {
float:right;
padding-right:.25em;;
padding-top:4px;
}

#featuredhashtags_content {
position:absolute;
right:.5em;
top:40px;
width:190px;
font-size:150%;
    letter-spacing: -2px;
    line-height: 0.75em;
    text-transform: uppercase;






            border:1px solid;
            border-color:transparent #ccc #ccc #ccc;
            padding:.15em;
            -moz-border-radius:0 0 4px 4px;
            -webkit-border-radius:0 0 4px 4px;







}

#featuredhashtags_content .ui-icon.close_small {
bottom:4px;
right:1px;
position:absolute;
}

#featuredhashtags_content a {
color:#000000;
text-decoration:none;
}

#featuredhashtags_content a:hover {
color:#FF0099;
text-decoration:underline;
}

.fs_025 {
font-size:.25em;
}



.fs_050 {
font-size:.50em;
}


.fs_075 {
font-size:.75em;
}


.fs_100 {
font-size:1em;
}


.fs_125 {
font-size:.1.25em;
}


.fs_150 {
font-size:.1.5em;
}

article.twit {
font-size:1.25em;
clear:both;
margin-bottom:2em;
}

article.twit.lo1 .t > a {
text-decoration:none !important;
}

article.twit footer {
font-size:.75em;
}

article.twit footer,
article.twit footer a {
color:#888;
}

article.twit a:hover {
color:#ff0099;
}

.twit aside .squares {
width:auto;
display:inline-block;
float:left;
margin:0 1em 1em 0;
}

.stream article img,
.channel article img {
float:right;
height:90px;
}

.twit aside .squares.share {
margin-top:.5em;
}

.twit aside .squares .description {
display:none;
}

.squares.mainimg #fullsize {
max-width:640px;
}

#mainimg {
min-width:640px;
}

.squares {
position:relative;
}

.squares .avatar {
position:absolute;
top:1.25em;
left:1.25em;
}

.twit .t {
position:relative;
margin-bottom:0;
display:inline-block;
	z-index: 1; 
	cursor: pointer;
	position: relative;
	text-decoration:none;
	padding: .5em 0;
	color:#111111;
	border-radius: 10px;
	-moz-border-radius: 10px;
	-webkit-border-radius: 10px;
	-o-border-radius: 10px;
	background-color: rgb(229,229,229);


    box-shadow: rgb(185,185,185) 0 0px 5px;
    -moz-box-shadow: rgb(185,185,185) 0 0px 5px;
    -webkit-box-shadow: rgb(185,185,185) 0 0px 5px;
width:100%;

}
.twit .t > p,
.twit .t > footer
{
padding:0;
margin:0 10px;
}
.twit .t .slant {
left:14px;
bottom:-26px;
-moz-transform:rotate(-115deg);
-webkit-transform: rotate(-115deg);
-o-transform: rotate(-115deg);
transform: rotate(-115deg);
-ms-transform: rotate(-115deg);
border-color:transparent transparent rgb(229,229,229);
border-style:solid;
border-width:1px 1px 20px 46px;
background:none;
float:left;
height:0;
margin:0 10px;
width:0;
position:absolute;
z-index:0;
}

.yml:hover {
-moz-transform:rotate(1deg);
-webkit-transform: rotate(1deg);
-o-transform: rotate(1deg);
transform: rotate(1deg);
-ms-transform: rotate(1deg);


    box-shadow: rgb(185,185,185) 0 0px 8px;
    -moz-box-shadow: rgb(185,185,185) 0 0px 8px;
    -webkit-box-shadow: rgb(105,105,105) 0 0px 8px;

z-index:2;

}

.yml {
z-index:1;
margin-right:-4px;
display:inline-block;
width:150px;
height:114px;
overflow:hidden;


        -moz-border-radius: 10px;
        -webkit-border-radius: 10px;
        -o-border-radius: 10px;
        background-color: rgb(229,229,229);


    box-shadow: rgb(185,185,185) 0 0px 3px;
    -moz-box-shadow: rgb(185,185,185) 0 0px 3px;
    -webkit-box-shadow: rgb(185,185,185) 0 0px 3px;

}

.yml iframe {
background:#fff;
padding:2px;
width: 146px;
height: 112px;
margin: 0;
border: none;
overflow: hidden;


}


#dim_bg,
#undim_bg {
    color: #111111;
    font-size: 0.85em;
    line-height: 1.75em;
    margin-top: 0.3em;
    padding: 0.15em 0.15em 0;
}

#fni {
color:#bbb;
}

#fni .fni .details {
display:none;
}

.NULL * {
opacity:.5;
}
.NULL td {
text-decoration: line-through;
}

#recent {
width: 730px;
margin-left: 100px;
position: relative;
height: 160px;
margin-bottom: 1em;
overflow: hidden;
}

#recent time.posted {
display:none;
}

.picctrl {
    position: absolute;
    right: .25em;
    top: 0;
    z-index: 1000;
}

